--- a/PMC-Desktop/Properties/Resources.resx
+++ b/PMC-Desktop/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="Paschal-P-30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Paschal-P-30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Paschal-P-15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Paschal-P-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
