--- a/PMC-Desktop/Properties/Resources.resx
+++ b/PMC-Desktop/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Larger-Paschal-P-01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Larger-Paschal-P-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Paschal-P-15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Paschal-P-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Paschal-P-30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Paschal-P-30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Paschal-P-15" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Paschal-P-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Larger-Paschal-P-01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Larger-Paschal-P-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paschal-P-10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Paschal-P-10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
